--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -2,4 +2,5 @@
 <h1>{{pageTitle}}</h1>
 <p><a href="/">HomePage</a></p>
 <p><a href="/about">about</a></p>
+<p><a href="/projects">projects</a></p>
 </header>
