add a project page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,7 +7,7 @@
    </head>
    <body>
      {{> head}}
-     <p>The Company's Protfolio</p>
+     <p>The current projects</p>
 
       {{> footer}}
    </body>
